测试搜索成功